--- a/index.html
+++ b/index.html
@@ -61,15 +61,42 @@
                 <a href="#" id="download_main"><i class="bi bi-cloud-arrow-down-fill"></i></a>
             </div>
         </div>
+
+        <section>
+            <h4>populer</h4>
+            <i id="left_btn" class="fa-solid fa-chevron-left"></i>
+            <i id="right_btn" class="fa-solid fa-chevron-right"></i>
+            <div class="cards">
+                <!-- <a href="" class="card" data-video="video/jurasicworld.webm">
+                    <img class="poster" src="img/jurassic world.jpg" alt="">
+                    <div class="rest-card">
+                        <img src="img/jurassic world1.jpg" alt="">
+                        <div class="cont">
+                            <h4>jurasic world</h4>
+                            <div class="sub">
+                                <p>Action,2022</p>
+                                <h3><span>IMDB</span><i class="fa-solid fa-star"></i>9.6</h3>
+                            </div>
+                        </div>
+                    </div>
+                </a> -->
+            </div>
+        </section>
     </header>
      
 
 
     
 
-    <!-- ! bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- !aos js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<!-- ! aos init -->
+    <script>
+        Aos.init();
+    </script>
+
+
+    <!-- ! external js -->
+    <script src="scripts/index.js"></script>
 </body>
 </html>
