--- a/movies..html
+++ b/movies..html
@@ -8,7 +8,7 @@
 
     <!-- ! favicon  -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
- 
+
     <!-- !Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -27,42 +27,120 @@
     <header>
         <nav>
             <div class="logo-ul">
-                <img src="img/logo.png" alt="">
+                <img src="img/logo.png" alt="Site Logo">
                 <ul>
-                    <li><a href="index.html"></a>Home</li>
-                    <li><a href="index.html"></a>series</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="series.html">Series</a></li>
                     <li>
-                        <a href="movies..html"></a>
+                        <a href="movies.html">Movies</a>
                         <div class="movies-list">
-                            <p id="upcoming">vizyona Girecekler</p>
-                            <p id="upcoming">vizyona Girecekler</p>
-                            <p id="upcoming">vizyona Girecekler</p>
+                            <p id="upcoming">Vizyona Girecekler</p>
+                            <p id="popular">Popüler</p>
+                            <p id="toprated">En Çok Oy Alanlar</p>
                         </div>
                     </li>
+                    <li><a href="#">Kids</a></li>
                 </ul>
             </div>
         </nav>
-    </header>
-
-    <!-- ! content alanai -->
-
-    <div class="movies-conten">
-        <div class="movies-wrapper popolar">
-            <div class="movies-card">
-                <img src="img/avengers.jpg" alt="">
-
+    
+        <!-- ! Content Alanı -->
+        <div class="movies-content">
+            <div class="movies-wrapper popular">
+                <!-- <div class="movie-card">
+                    <img src="img/avengers.jpg" alt="Avengers Movie Poster">
+                    <div class="movie-info">
+                        <h4>Avengers</h4>
+                        <p>Action, Drama</p>
+                        <p>20 Temmuz 2024</p>
+                        <h6><span>IMDB</span> <i class="fa-solid fa-star"></i> 9.6</h6>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="img/avengers.jpg" alt="Avengers Movie Poster">
+                    <div class="movie-info">
+                        <h4>Avengers</h4>
+                        <p>Action, Drama</p>
+                        <p>20 Temmuz 2024</p>
+                        <h6><span>IMDB</span> <i class="fa-solid fa-star"></i> 9.6</h6>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="img/avengers.jpg" alt="Avengers Movie Poster">
+                    <div class="movie-info">
+                        <h4>Avengers</h4>
+                        <p>Action, Drama</p>
+                        <p>20 Temmuz 2024</p>
+                        <h6><span>IMDB</span> <i class="fa-solid fa-star"></i> 9.6</h6>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="img/avengers.jpg" alt="Avengers Movie Poster">
+                    <div class="movie-info">
+                        <h4>Avengers</h4>
+                        <p>Action, Drama</p>
+                        <p>20 Temmuz 2024</p>
+                        <h6><span>IMDB</span> <i class="fa-solid fa-star"></i> 9.6</h6>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="img/avengers.jpg" alt="Avengers Movie Poster">
+                    <div class="movie-info">
+                        <h4>Avengers</h4>
+                        <p>Action, Drama</p>
+                        <p>20 Temmuz 2024</p>
+                        <h6><span>IMDB</span> <i class="fa-solid fa-star"></i> 9.6</h6>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="img/avengers.jpg" alt="Avengers Movie Poster">
+                    <div class="movie-info">
+                        <h4>Avengers</h4>
+                        <p>Action, Drama</p>
+                        <p>20 Temmuz 2024</p>
+                        <h6><span>IMDB</span> <i class="fa-solid fa-star"></i> 9.6</h6>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="img/avengers.jpg" alt="Avengers Movie Poster">
+                    <div class="movie-info">
+                        <h4>Avengers</h4>
+                        <p>Action, Drama</p>
+                        <p>20 Temmuz 2024</p>
+                        <h6><span>IMDB</span> <i class="fa-solid fa-star"></i> 9.6</h6>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="img/avengers.jpg" alt="Avengers Movie Poster">
+                    <div class="movie-info">
+                        <h4>Avengers</h4>
+                        <p>Action, Drama</p>
+                        <p>20 Temmuz 2024</p>
+                        <h6><span>IMDB</span> <i class="fa-solid fa-star"></i> 9.6</h6>
+                    </div>
+                </div>
+                <div class="movie-card">
+                    <img src="img/avengers.jpg" alt="Avengers Movie Poster">
+                    <div class="movie-info">
+                        <h4>Avengers</h4>
+                        <p>Action, Drama</p>
+                        <p>20 Temmuz 2024</p>
+                        <h6><span>IMDB</span> <i class="fa-solid fa-star"></i> 9.6</h6>
+                    </div>
+                </div> -->
             </div>
         </div>
-    </div>
+    </header>
+    
 
 
 
     <!-- !aos js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-<!-- !Aos init -->
+    <!-- !Aos init -->
     <script>
-        Aos.init();
+        AOS.init();
     </script>
 
     <!-- ! external js -->
