--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="">Movies</a>
+                        <a href="movies..html">Movies</a>
                     </li>
                     <li>
-                        <a href="">series</a>
+                        <a href="series.html">series</a>
                     </li>
                     <li>
                         <a href="">kids</a>
