movies sayfasi ve detay sayfasi tasarimi bitti

--- a/movies..html
+++ b/movies..html
@@ -42,6 +42,9 @@
                     <li><a href="#">Kids</a></li>
                 </ul>
             </div>
+            <div>
+                <input type="text" id="searchInput" placeholder="film arayiniz">
+            </div>
         </nav>
     
         <!-- ! Content Alanı -->
