--- a/series.html
+++ b/series.html
@@ -30,7 +30,7 @@
                 <img src="img/logo.png" alt="Site Logo">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="movies.html">Series</a></li>
+                    <li><a href="series.html">Series</a></li>
                     <li>
                         <a href="movies.html">Movies</a>
                         <div class="movies-list">
